--- a/Weather/www/css/style.css
+++ b/Weather/www/css/style.css
@@ -1,1 +1,8 @@
 /* Empty. Add your own CSS if you like */
+.weather-home {
+    background-image: url('../img/sky1.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    flex: 1;
+    flex-direction: column;
+}
